# CookBot

./: .gitignore  README.md  extract.py  pyproject.toml
.github/workflows/: pythonpackage.yml
ExtractOutputs/results/: aly-output1.txt  aly-output10.txt  aly-output100.txt  aly-output101.txt  aly-output11.txt  aly-output12.txt  aly-output13.txt  aly-output14.txt  aly-output15.txt  aly-output16.txt  aly-output17.txt  aly-output18.txt  aly-output19.txt  aly-output2.txt  aly-output20.txt  aly-output21.txt  aly-output22.txt  aly-output23.txt  aly-output24.txt  aly-output25.txt  aly-output26.txt  aly-output27.txt  aly-output28.txt  aly-output29.txt  aly-output30.txt  aly-output31.txt  aly-output32.txt  aly-output33.txt  aly-output34.txt  aly-output35.txt  aly-output36.txt  aly-output37.txt  aly-output38.txt  aly-output39.txt  aly-output40.txt  aly-output41.txt  aly-output42.txt  aly-output43.txt  aly-output44.txt  aly-output45.txt  (+125 more)
ExtractOutputs/train-plain/: aly-output100.txt  aly-output101.txt  aly-output18.txt  aly-output19.txt  aly-output20.txt  aly-output21.txt  aly-output22.txt  aly-output23.txt  aly-output24.txt  aly-output25.txt  aly-output26.txt  aly-output27.txt  aly-output28.txt  aly-output29.txt  aly-output30.txt  aly-output31.txt  aly-output32.txt  aly-output33.txt  aly-output34.txt  aly-output35.txt  aly-output36.txt  aly-output37.txt  aly-output38.txt  (+125 more)
cookbot/: decoder.py  encoder.py  log.txt  main.py  recipelinks.json
training_checkpoints/: ckpt-1.index  ckpt-2.data-00000-of-00001  ckpt-2.index  ckpt-3.index  ckpt-4.index  ckpt-5.index  ckpt-6.index
(+166 files in other folders)
